<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_splash_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_ground"
    android:orientation="vertical"
    tools:context="com.techkshetrainfo.mladashboard.DashBoard"
    tools:ignore="Overdraw">

    <ImageView
        android:id="@+id/header_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:background="@color/colorPrimaryDark"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_gravity="top"
        android:scaleType="fitXY"
        android:src="@drawable/header_image"
        tools:ignore="ContentDescription" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_below="@+id/header_image"
        android:layout_weight="1"
        android:background="@drawable/transparent_background"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/speak_to_your_mla"
            android:textAllCaps="true"
            android:textColor="#ffeb3b"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/splash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:adjustViewBounds="true"
            android:padding="10dp"
            android:cropToPadding="true"
            android:gravity="center"
            android:scaleType="fitXY"
            android:src="@drawable/mla_icon"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_border"
            android:padding="10dp"
            android:fontFamily="serif"
            android:text="@string/raise_your_request"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
             />
        <!--android:background="#00acc1"-->

        <TextView
            android:id="@+id/tv_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/citizens_platform"
            android:textAllCaps="true"
            android:textColor="#ffeb3b"
            android:padding="10dp"
            android:textSize="14sp"
             />

        <TextView
            android:id="@+id/tv_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/comprehensive_tool"
            android:textAllCaps="false"
            android:textColor="#DCEDC8"
            android:textSize="12sp"
             />
    </LinearLayout>


</RelativeLayout>
