<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/transparent_background"
    android:orientation="vertical"
    tools:context="com.techkshetrainfo.mladashboard.ResetPasswordActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center">



                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:adjustViewBounds="true"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:scaleType="fitXY"
                    android:src="@drawable/splash"
                    tools:ignore="ContentDescription" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/timer"
                android:layout_toEndOf="@+id/timer"
                android:layout_toRightOf="@+id/timer"
                android:orientation="vertical"                >

                <TextView
                    android:id="@+id/timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageView"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_gravity="center_horizontal"-->
                    <!--android:padding="5dp"-->
                    <!--android:text="@string/fgot_pwd"-->
                    <!--android:textStyle="bold"-->
                    <!--android:textColor="@android:color/white"-->
                    <!--android:textSize="30sp" />-->

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:gravity="center_horizontal"
                    android:padding="8dp"
                    android:layout_gravity="center"
                    android:text="@string/forgot_password_msg"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/forget_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:layout_marginTop="14dp"
                        android:background="@drawable/border"
                        android:hint="Enter email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:textColorHint="@color/colorWhite" />

                </android.support.design.widget.TextInputLayout>

                <!--<android.support.design.widget.TextInputLayout-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content">-->

                    <!--<AutoCompleteTextView-->
                        <!--android:id="@+id/et_code"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_marginLeft="30dp"-->
                        <!--android:layout_marginRight="30dp"-->
                        <!--android:background="@drawable/border"-->
                        <!--android:layout_marginTop="14dp"-->
                        <!--android:hint="Enter Code"-->
                        <!--android:inputType="textPassword"-->
                        <!--android:maxLines="1"-->
                        <!--android:padding="10dp"-->
                        <!--android:textColorHint="@color/colorWhite" />-->

                <!--</android.support.design.widget.TextInputLayout>-->

                <!--<android.support.design.widget.TextInputLayout-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"                    >-->

                    <!--<AutoCompleteTextView-->
                        <!--android:id="@+id/et_password"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_marginLeft="30dp"-->
                        <!--android:layout_marginRight="30dp"-->
                        <!--android:layout_marginTop="14dp"-->
                        <!--android:background="@drawable/border"-->
                        <!--android:hint="Enter Password"-->
                        <!--android:inputType="textPassword"-->
                        <!--android:maxLines="1"-->
                        <!--android:padding="10dp"-->
                        <!--android:textColorHint="@color/colorWhite" />-->

                <!--</android.support.design.widget.TextInputLayout>-->
                <!-- Login Button -->

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/forget_btn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="16dp"
                    android:background="#00acc1"
                    android:text="@string/rset_pwd"
                    android:textColor="@color/colorWhite"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="8dp"
                    android:background="@null"
                    android:text="@string/bk"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlack" />

                <ProgressBar
                    android:id="@+id/progress"
                    style="@style/Base.Widget.AppCompat.ProgressBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:indeterminate="true"
                    android:visibility="invisible" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>